fix: fixed contrast of cta button

--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -42,11 +42,11 @@
     /* nav hover */
     --black-hover: #404655;
     /* button colors */
-    --btn-cta: #de3e44;
-    --btn-cta-hover: #af363a;
+    --btn-cta: #d10007;
+    --btn-cta-hover: rgb(146, 23, 27);
 
     --btn-warning: #01a2b9;
-    --btn-warning-hover: #057c8f;
+    --btn-warning-hover: #086d7c;
 
 }
 
